# pyconza-mailer

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  example.env  helpers.py  mailer.py  mjml.py  mjml_to_html.py  mypy.ini  pyproject.toml  readme.md  templating.py
app/: __init__.py  config.py  helpers.py  mjml.py  send.py  sheets.py  templating.py
mailer/: __init__.py  config.py  helpers.py  mjml.py  send.py  templating.py
templates/html/: assistance_needed.html  end_of_early_bird.html  example.html  first.html  first_email.html  initial_call_for_sponsors.html  initial_mailer.html  invitation_to_programme_team.html  less_than_one_week_away.html  new_tutorial_and_sponsor.html  one_day_to_go.html  our_first_approved_keynote.html  post_conference.html  talks_1.html  thanks_for_coming_to_pyconza_2024.html  tickets_open.html  unfortunate_sending_error.html
templates/html/2023/: first.html  one_week_left.html  sponsor.html  tutorial_1.html
templates/html/2024/: initial_call_for_sponsors.html  ticket_sales_open.html
templates/mjml/: assistance_needed.mjml  end_of_early_bird.mjml  example.mjml  first.mjml  first_email.mjml  initial_call_for_sponsors.mjml  initial_mailer.mjml  invitation_to_programme_team.mjml  one_day_to_go.mjml  our_first_approved_keynote.mjml  post_conference.mjml  thanks_for_coming_to_pyconza_2024.mjml  ticket_sales_open.mjml  tickets_open.mjml  tutorial_1.mjml
templates/mjml/2023/: first.mjml  one_week_left.mjml  sponsor.mjml  talks_1.mjml
templates/mjml/2024/: less_than_one_week_away.mjml  new_tutorial_and_sponsor.mjml
templates/pre_mjml/: base.mjml  base_post.mjml  end_of_early_bird.mjml  example.mjml  first.mjml  first_email.mjml  initial_call_for_sponsors.mjml  initial_mailer.mjml  invitation_to_programme_team.mjml  less_than_one_week_away.mjml  new_tutorial_and_sponsor.mjml  one_week_left.mjml  post_conference.mjml  talks_1.mjml  ticket_sales_open.mjml  tickets_open.mjml
templates/pre_mjml/2023/: assistance_needed.mjml  base.mjml  first.mjml  sponsor.mjml  tutorial_1.mjml
templates/pre_mjml/2024/: base.mjml  one_day_to_go.mjml  our_first_approved_keynote.mjml  thanks_for_coming_to_pyconza_2024.mjml  unfortunate_sending_error.mjml
templates/txt/: assistance_needed.txt  base.txt  end_of_early_bird.txt  example.txt  first.txt  initial_call_for_sponsors.txt  initial_mailer.txt  less_than_one_week_away.txt  new_tutorial_and_sponsor.txt  one_day_to_go.txt  one_week_left.txt  sponsor.txt  ticket_sales_open.txt  tickets_open.txt  unfortunate_sending_error.txt
templates/txt/2023/: base.txt  example.txt  first.txt  post_conference.txt  talks_1.txt  tutorial_1.txt
templates/txt/2024/: base.txt  initial_mailer.txt  our_first_approved_keynote.txt  thanks_for_coming_to_pyconza_2024.txt
