[tool.poetry]
name = "pyconza-mailer"
version = "0.1.0"
description = "Mass mailer for PyConZA using jinja2, mjml and mailtrap"
authors = ["Adam Piskorski <adam@piskorski.me>"]
license = "mit"
readme = "README.md"
packages = [{ include = "pyconza_mailer" }]

[tool.poetry.dependencies]
python = "^3.12"
mailtrap = "^2.0.1"
fire = "^0.6.0"
gspread = "^6.1.2"
jinja2 = "^3.1.4"
httpx = "^0.27.2"
pydantic-settings = "^2.5.2"
pydantic = {version = "^2.9.2", extras = ["email"]}
google-auth-oauthlib = "^1.2.1"
greenlet = "^3.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.3"
black = "^24.8.0"
pre-commit = "^3.8.0"
ruff = "^0.6.8"
rich = "^13.8.1"
bpython = "^0.24"
djlint = "^1.35.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py311']

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".vscode",
    ".pytest_cache",
    ".mypy_cache",
    "__pycache__",
    "templates",
]

[tool.ruff]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "ERA",
    "F",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T10",
    "T20",
    "TCH",
    "TID",
    "UP",
    "W",
]
ignore = ["E501"]
line-length = 90
show-fixes = true
target-version = "py311"
extend-exclude = ["**/migrations/**", "athena/dynamics365crm/client.py"]

[tool.ruff.pydocstyle]
convention = "google"
