[project]
name = "pyconza-mailer"
version = "0.1.0"
description = "Mass mailer for PyConZA using jinja2, mjml and mailtrap"
authors = [{ name = "Adam Piskorski", email = "adam@piskorski.me" }]
requires-python = ">=3.11"
dependencies = [
    "mailtrap>=2.0.1,<3.0.0",
    "fire>=0.7.0,<1.0.0",
    "gspread>=6.1.2,<7.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "httpx>=0.27.2,<1.0.0",
    "pydantic-settings>=2.5.2,<3.0.0",
    "pydantic[email]>=2.9.2,<3.0.0",
    "google-auth-oauthlib>=1.2.1,<2.0.0",
    "greenlet>=3.1.1,<4.0.0",
    "rich>=13.9.4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.2,<2.0.0",
    "pytest>=8.3.3,<9.0.0",
    "pre-commit>=3.8.0,<4.0.0",
    "ruff>=0.6.8,<1.0.0",
    "bpython>=0.24,<1.0.0",
    "djlint>=1.35.2,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".vscode",
    ".pytest_cache",
    ".mypy_cache",
    "__pycache__",
    "templates",
]

[tool.ruff]
line-length = 90
show-fixes = true
target-version = "py311"
exclude = ["**/migrations/**", "athena/dynamics365crm/client.py"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "ERA",
    "F",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T10",
    "T20",
    "TCH",
    "TID",
    "UP",
    "W",
]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
